--- a/Project1/to-do-list.css
+++ b/Project1/to-do-list.css
@@ -1,10 +1,115 @@
-body{
+*{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 0px;
+    margin: 0px;
+} 
 
+body{
+    background:linear-gradient(15deg,#3b3ee3 ,red );
+    min-width: 100vw;
+    min-height: 100vh;
 }
 
 .container{
+    background:linear-gradient(15deg,#3b3ee3 ,red );
     height: 100vh;
     width: 100vw;
+}
+
+.box{
+    background-color: white;
+    border: 2px solid white;
+    height: 200px;
+    width: 300px;
+    padding: 15px;
     justify-content: center;
-    align-items: center;    
+    align-items: center; 
+    margin:auto;
+    margin-top: 100px;
+    border-radius: 10px;
+
+}
+
+.box:hover{
+    box-shadow: 10px 10px 10px;
+}
+
+
+.header-box{
+    font-weight: 20px;
+    font-size: large;
+    text-transform: uppercase;
+    text-decoration: solid;
+    border: 2px solid white;  
+    display: flex;
+    padding: 10px;
+    align-items:center;
+}
+
+.image{
+    height: 30px;
+    width: 30px;
+    padding-left: 10px;
+}
+
+.input{
+    justify-content: space-between;
+    margin-top: 15px;
+    background: transparent;
+    background-color: #efe2e2;
+    border-radius:10px;
+}
+
+input{
+    padding-left: 12px;
+    outline: none;
+    border: none;
+    background:transparent;
+    font-weight: 14;
+}
+
+button{
+    border-radius: 5px;
+    color: white;
+    background-color: green;
+    border:none;
+    outline: none;
+    padding: 16px 40px;
+}
+
+button:hover{
+    cursor:pointer;
+}
+
+ul li{
+    list-style: none;
+    padding:12px 8px 12px 50px;
+    position: relative;
+    font-size: medium;
+    user-select:none;
+    cursor: pointer;
+}
+
+
+ul li::before{
+    background-size:cover;
+    background-position: center;
+    background:url(images/unchecked.png);
+    content: '';
+    position: absolute;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    top:8px;
+    left:10px;
+}
+
+ul li.checked{
+    text-decoration: line-through;
+    color: #555;
+}
+
+ul li.checked::before{
+    color:#666;
+    background-image :url(images/checked.png)
 }
