--- a/Project1/to-do-list.css
+++ b/Project1/to-do-list.css
@@ -19,8 +19,8 @@ body{
 .box{
     background-color: white;
     border: 2px solid white;
-    height: 200px;
-    width: 300px;
+    min-height: 200px;
+    width: 375px;
     padding: 15px;
     justify-content: center;
     align-items: center; 
@@ -61,7 +61,7 @@ body{
 }
 
 input{
-    padding-left: 12px;
+    padding-left: 18px;
     outline: none;
     border: none;
     background:transparent;
@@ -75,6 +75,7 @@ button{
     border:none;
     outline: none;
     padding: 16px 40px;
+    margin-left: 69px;
 }
 
 button:hover{
@@ -90,6 +91,22 @@ ul li{
     cursor: pointer;
 }
 
+ul li span{
+    position: absolute;
+    right:0px;
+    top:5px;
+    width:40px;
+    height:40px;
+    font-size: 22px;
+    color:#555;
+    text-align: center;
+    border-radius: 50%;
+    line-height: 38px;
+}
+
+ul li span:hover{
+    background-color: #efe2e2;
+}
 
 ul li::before{
     background-size:cover;
@@ -113,3 +130,4 @@ ul li.checked::before{
     color:#666;
     background-image :url(images/checked.png)
 }
+
